cluster/homa/hass_clean/003-deployment.yaml
---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: homeassistant
  namespace: homa-dev
  labels:
    app: homassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: homeassistant

    spec:
      volumes:
        - name: config-volume
          hostPath:
            path: /data/volumes/homa/hass_clean/config/
      containers:
        - name: homeassistant
          image: 'homeassistant/home-assistant:beta'
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
          ports:
            - containerPort: 8123
          volumeMounts:
          - name: config-volume
            mountPath: /config
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          securityContext:
            privileged: true
      restartPolicy: Always
      hostNetwork: false
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      nodeName: vps-e750b1ad
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
