cluster/homa/hass_clean/004-service.yaml
---

kind: Service
apiVersion: v1
metadata:
  name: homeassistant
  namespace: homa-dev
  labels:
    app: homeassistant
    kubernetes.io/name: homeassistant
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8123
#      nodePort: 31823
#    - name: rsync
#      port: 873
#      nodePort: 31873
  selector:
    app: homeassistant
